# lowbitdnn-project

./: 123.py  convolution_code_gen.py  setup.sh  weights.py  wincnn.py
benchmark/: conv_benchmark.cuh  float32.cu  int8.cu  utils.h
cpp/: CMakeLists.txt  Dockerfile  asd.py  dockerrun.sh
cpp/apps/: CMakeLists.txt  benchmark.cpp  config.json  conv_int8x32.cu  pooling_int8x32.cu  softmax_int8x4.cu
cpp/apps/custom_convolution/: CMakeLists.txt  compare.cu  cudnn2DConvolution.cuh  custom2DConvolution.cuh
cpp/int8conv/: CMakeLists.txt  check.cu  conv2DBackwardData3x3.cuh  conv2DBackwardWeights3x3.cuh  conv2DForward3x3.cuh  conv2DForward3x3Fused.cuh  conv2DForward3x3TensorCores.cuh  conv2DForward3x3WinogradFused.cuh  cudnn2DConvolution.cuh  refConv2DForward.hpp  utils.cuh
cpp/libbenchmark/: CMakeLists.txt  benchmark.cu  benchmark.cuh
python/: benchmark_backward.py  custom_forward.py  neon_conv.py  tmp.py  tvm.py
python/df-optimization/: Int8Conv2d.py
python/df-optimization/simulated_annealing/: __init__.py  acceptance.py  annealing.py  engine.py  history.py  temperature.py
python/qtorch/: __init__.py  jit.py
python/qtorch/cpp/: conv2d.cuh  conv2d_backward_data.cuh  conv2d_backward_data_v1.cuh  conv2d_forward.cuh  module.cu  pool2d.cuh  utils.cuh
python/qtorch/nn/: QConv2d.py  __init__.py
python/qtorch/nn/functional/: __init__.py  qconv2d.py  quantization.py  utils.py
python/qtorch/tests/: conftest.py  main.py  qconv2d_test.py
python/qtorch/tests/.pytest_cache/v/cache/: lastfailed  nodeids
